# geoclue-provider-gpsd3

./: .gitignore  AUTHORS  README  autogen.sh  configure.ac
rpm/: geoclue-provider-gpsd3.spec
src/: Makefile.am  geoclue-gpsd3.c  geoclue-gpsd3.provider  org.freedesktop.Geoclue.Providers.Gpsd3.service.in
